manifests/dashboard/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:17
        name: postgres
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pvc-dashboard
        ports:
          - containerPort: 5432
      volumes:
        - name: pvc-dashboard 
          persistentVolumeClaim:
            claimName: pvc-dashboard
