manifests/dashboard/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: dashboard
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: dashboard-backend
  type: ClusterIP
status:
  loadBalancer: {}
