manifests/dashboard/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-service
  name: dashboard-service
  namespace: dashboard
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
status:
  loadBalancer: {}
