manifests/dashboard/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: dashboard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dashboard-frontend
  type: ClusterIP
status:
  loadBalancer: {}
