manifests/dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: dashboard
spec:
  parentRefs:
    - name: app-gateway
      namespace: infrastructure
  hostnames:
    - dashboard.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: backend       
          port: 8000
    - matches:
        - path: 
            type: PathPrefix 
            value: /items
      backendRefs:
        - name: backend      
          port: 8000
    - matches:
        - path: 
            type: PathPrefix
            value: / 
      backendRefs:
        - name: frontend     
          port: 80
